--- a/scss/initialize.scss
+++ b/scss/initialize.scss
@@ -10,13 +10,6 @@ ul {
   }
 }
 
-
-.icon{
-  font-size: 42px;
-  line-height: 100px;
-  margin: 10px 0;
-  color:#333;
-  -webkit-transition: font-size 0.25s ease-out 0s;
-  -moz-transition: font-size 0.25s ease-out 0s;
-  transition: font-size 0.25s ease-out 0s;
+p {
+  margin: 0;
 }
