撸了选型的的逻辑

--- a/scss/container.scss
+++ b/scss/container.scss
@@ -35,6 +35,7 @@
           display: inline-block;
           text-align: center;
           border: 1px solid #ddd;
+          cursor: pointer;
 
           &.default {
             color: #000;
