--- a/scss/zenburn.scss
+++ b/scss/zenburn.scss
@@ -6,6 +6,8 @@ based on dark.css by Ivan Sagalaev
 */
 
 .markdown {
+  width: 60%;
+  margin: 0 auto;
   pre {
     display: block;
     background: #3F3F3F;
