--- a/scss/container.scss
+++ b/scss/container.scss
@@ -82,19 +82,26 @@
 
 
 .container {
-
+  background-color: transparent;
   .c-layout {
+    position: relative;
+    background-color: transparent;
     .c-sidebar {
-      width: 20%;
       position: absolute;
+      margin-left: 2px;
       left: 0;
-      top: 175px;
+      top: 45px;
+      width: 25% !important;
+      max-width: 220px;
+      max-height: 650px;
       background-color: #fff;
     }
     .c-content {
-      padding-left: 20%;
       width: 100%;
+      min-height: 652px;
+      padding-left: 26%;
       background-color: #fff;
+
     }
   }
 }
