--- a/scss/container.scss
+++ b/scss/container.scss
@@ -86,6 +86,7 @@
   .c-layout {
     position: relative;
     background-color: transparent;
+    margin-top: 120px;
     .c-sidebar {
       position: absolute;
       margin-left: 2px;
