--- a/components/Header/header.scss
+++ b/components/Header/header.scss
@@ -1,11 +1,21 @@
 .headerWrap {
-
+  position: fixed;
+  left: 0;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
   border-bottom: 1px solid #ddd;
-  margin-bottom: 60px;
   height: 84px;
   line-height: 74px;
+  background-color: #f1b717;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
+  z-index: 1000;
 
   .headerTitle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 0;
 
     a {
@@ -13,34 +23,53 @@
       box-shadow: none;
       transition: color 0.5s;
       line-height: 70px;
+      color: #fff;
 
       &:hover {
-        color: #00d8ff;
+        color: #373a3f;
       }
     }
   }
 
   .headerMenu {
-
-  }
-
-  .headerList {
+    background-color: transparent;
+    border: none;
     display: flex;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    justify-content: center;
+    align-items: center;
 
     li {
       flex: 0 1 25%;
       list-style: none;
+      border: none;
+
+
+      &:hover {
+        border: none;
+      }
 
       a {
+        font-size: 16px;
+        font-weight: 700;
         box-shadow: none;
         transition: color 0.5s;
+        color: #fff;
 
         &:hover {
-          color: #00d8ff;
+          color: #373a3f;
         }
       }
+
+
+      &.header-selected {
+        a {
+          color: #373a3f;
+        }
+      }
+
     }
   }
+
+
+
 }
