--- a/scss/landing.scss
+++ b/scss/landing.scss
@@ -1,41 +1,157 @@
 .landing-container {
   width: 100%;
+  padding: 20px;
 
+  @media (max-width: 768px) {
+    padding-top: 0;
+  }
   .landing-article-list {
-
     .landing-article-item {
+      position: relative;
+      padding: 20px;
+      padding-bottom: 60px;
+      margin-bottom: 20px;
+      min-height: 240px;
+      background: #fff;
 
-      text-align: center;
-      padding: 0 20px;
-      margin-bottom: 30px;
-
-      .article-title {
-        display: block;
-        font-size: 28px;
-        text-align: center;
-        margin-bottom: 10px;
+      @media (max-width: 768px) {
+        min-height: fit-content;
+        padding: 20px;
       }
-
+      .article-title {
+        position: relative;
+        display: inline-block;
+        margin-bottom: 20px;
+        font-size: 26px;
+        line-height: 1.2;
+        color: rgba(0,0,0,0.6);
+        transition: color 0.2s;
+        &:hover {
+          color: #616161;
+        }
+        &:after {
+          content: "";
+          position: absolute;
+          bottom: -8px;
+          left: 0;
+          height: 3px;
+          width: 40px;
+          background: #06ad9e;
+        }
+      }
       .article-msg {
+        position: absolute;
+        width: 160px;
         font-size: 16px;
-        padding: 0 10px;
         margin-bottom: 10px;
-        .msg-item {
 
+
+        @media (max-width: 768px) {
+          position: relative;
+          margin: 0;
+          width: 100%;
+        }
+
+        .msg-item-wrapper {
+
+        }
+
+        .msg-item-title {
+          font-size: 12px;
+          font-weight: bold;
+          @media (max-width: 768px) {
+            display: inline-block;
+          }
+        }
+        .msg-item-content {
+          font-size: 12px;
+          margin-top: 3px;
+          margin-bottom: 8px;
+          @media (max-width: 768px) {
+            display: inline;
+          }
         }
         .msg-sub-item {
-          padding: 0 5px;
+          position: relative;
+          display: inline-block;
+          margin-right: 6px;
+          margin-left: 12px;
+          margin-bottom: 5px;
+          cursor: pointer;
+          padding: 0 10px 0 12px;
+          background: #06ad9e;
+          height: 20px;
+          line-height: 20px;
+          color: #fff;
+          text-decoration: none;
+          border-bottom-right-radius: 4px;
+          border-top-right-radius: 4px;
+          font-size: 12px;
+
+          &:before {
+            content: "";
+            float: left;
+            position: absolute;
+            top: 0;
+            left: -10px;
+            width: 0;
+            height: 0;
+            border-color: transparent #06ad9e transparent transparent;
+            border-style: solid;
+            border-width: 10px 10px 10px 0;
+          }
+          &:after {
+            content: "";
+            position: absolute;
+            top: 8.5px;
+            left: 0;
+            float: left;
+            width: 4px;
+            height: 4px;
+            border-radius: 2px;
+            background: #fff;
+            box-shadow: -1px -1px 2px #03524b;
+          }
         }
       }
-
       .article-pic {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         margin-bottom: 10px;
-      }
+        margin-left: 180px;
 
+        @media (max-width: 768px) {
+          margin-left: 0;
+        }
+
+        img {
+          max-width: 90%;
+        }
+      }
       .article-desc {
         text-align: left;
         margin-bottom: 10px;
+        padding-left: 180px;
         font-size: 14px;
+
+        @media (max-width: 768px) {
+          padding: 0;
+        }
+      }
+      .article-btn {
+        position: absolute;
+        display: inline-block;
+        bottom: 20px;
+        left: 200px;
+        padding: 10px 20px;
+        border: 1px solid #e7e7e7;
+        color: #2d2d2d;
+
+        @media (max-width: 768px) {
+          position: static;
+
+        }
       }
     }
   }
