--- a/components/Header/header.scss
+++ b/components/Header/header.scss
@@ -12,11 +12,9 @@
   transition: background-color 0.2s;
   box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
   z-index: 1000;
-
   @media (max-width: 768px) {
     padding: 0 20px;
   }
-
   .headerTitle {
     width: 100%;
     display: flex;
@@ -24,7 +22,6 @@
     align-items: center;
     margin: 0;
     overflow: hidden;
-
     a {
       text-decoration: none;
       box-shadow: none;
@@ -33,52 +30,80 @@
       width: 100%;
       display: inline-block;
     }
-
   }
-
   .headerMenu {
     background-color: transparent;
     border: none;
     display: flex;
     justify-content: center;
     align-items: center;
-
     li {
       flex: 0 1 25%;
       list-style: none;
       border: none;
-
-
       &:hover {
         border: none;
       }
-
       a {
         font-size: 16px;
         font-weight: 700;
         box-shadow: none;
         transition: color 0.5s;
         color: #515963;
-
         &:hover {
           color: #fff;
         }
       }
-
-
-      &.header-selected {
+      &.active {
         a {
           color: #fff;
         }
       }
-
     }
-
     @media (max-width: 768px) {
       display: none;
     }
   }
-
-
-
+  &.about-theme {
+    background-color: #0a706f;
+    .headerMenu {
+      li {
+        &:hover {
+          border: none;
+        }
+        a {
+          color: #67b8b7;
+          &:hover {
+            color: #fff;
+          }
+        }
+        &.active {
+          a {
+            color: #fff;
+          }
+        }
+      }
+    }
+  }
+  &.archive-theme {
+    background-color: #194f79;
+    .headerMenu {
+      li {
+        &:hover {
+          border: none;
+        }
+        a {
+          color: #3f81b5;
+          &:hover {
+            color: #fff;
+          }
+        }
+        &.active {
+          a {
+            color: #fff;
+          }
+        }
+      }
+    }
+  }
 }
