--- a/components/SideBarRight/sidebar.scss
+++ b/components/SideBarRight/sidebar.scss
@@ -17,7 +17,7 @@
       &:after {
         content: "";
         position: absolute;
-        bottom: 0;
+        bottom: -1px;
         left: 0px;
         height: 3px;
         width: 40px;
