--- a/components/SideBarRight/sidebar.scss
+++ b/components/SideBarRight/sidebar.scss
@@ -1,10 +1,14 @@
 .siderBarRight {
   background-color: transparent;
-
   .slideBlock {
+    position: relative;
     padding: 20px;
     background-color: #fff;
     margin-bottom: 20px;
+
+    &.hide {
+      display: none;
+    }
 
     .slideTitle {
       position: relative;
@@ -12,8 +16,6 @@
       height: 36px;
       line-height: 30px;
       margin-bottom: 20px;
-
-
       &:after {
         content: "";
         position: absolute;
@@ -24,19 +26,15 @@
         background: #06ad9e;
       }
     }
-
     .slideArticle {
       display: block;
       font-size: 14px;
       color: #06ad9e;
       transition: color 0.2s;
-
-
       &:hover {
         color: #06ccbc;
       }
     }
-
     .slideLabel {
       position: relative;
       display: inline-block;
@@ -53,7 +51,6 @@
       border-bottom-right-radius: 4px;
       border-top-right-radius: 4px;
       font-size: 12px;
-
       &:before {
         content: "";
         float: left;
@@ -78,7 +75,52 @@
         background: #fff;
         box-shadow: -1px -1px 2px #03524b;
       }
+    }
+  }
+  .slideTabBlock {
+    display: flex;
+    padding: 10px 20px;
+    background-color: #fff;
+    margin-bottom: 0;
+    border-bottom: 1px solid #ddd;
 
+    .slideTabTitle {
+      position: relative;
+      flex: 0 1 50%;
+      width: 50%;
+      text-align: center;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      color: rgba(0, 0, 0, .25);
+      transition: color 0.2s;
+
+      &:hover {
+        color: rgba(0, 0, 0, .65);
+      }
+      &.active {
+        color: rgba(0, 0, 0, .65);
+
+        &:after {
+          content: "";
+          position: absolute;
+          bottom: -11px;
+          left: 50%;
+          height: 3px;
+          width: 60px;
+          margin-left: -30px;
+          background: #06ad9e;
+        }
+      }
+    }
+  }
+  &.hide {
+    display: none !important;
+  }
+
+  &.normal {
+    .slideTabBlock {
+      display: none;
     }
   }
 }
