--- a/scss/icon-font.scss
+++ b/scss/icon-font.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'iconfont';  /* project id 303012 */
-  src: url('//at.alicdn.com/t/font_bkmdv1ugac2nvcxr.eot');
-  src: url('//at.alicdn.com/t/font_bkmdv1ugac2nvcxr.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_bkmdv1ugac2nvcxr.woff') format('woff'),
-  url('//at.alicdn.com/t/font_bkmdv1ugac2nvcxr.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_bkmdv1ugac2nvcxr.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_303012_guoc214qhy0t3xr.eot');
+  src: url('//at.alicdn.com/t/font_303012_guoc214qhy0t3xr.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_303012_guoc214qhy0t3xr.woff') format('woff'),
+  url('//at.alicdn.com/t/font_303012_guoc214qhy0t3xr.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_303012_guoc214qhy0t3xr.svg#iconfont') format('svg');
 }
 
 .iconfont {
@@ -27,6 +27,8 @@
 
 .icon-github:before { content: "\e6ed"; }
 
+.icon-backtop:before { content: "\e6c6"; }
+
 .icon-rss2:before { content: "\e6d9"; }
 
 .icon-github1:before { content: "\e741"; }
@@ -40,4 +42,3 @@
 .icon-sekuairss:before { content: "\e6b3"; }
 
 .icon-zhihu1:before { content: "\e60c"; }
-
