--- a/components/Header/header.scss
+++ b/components/Header/header.scss
@@ -106,4 +106,26 @@
       }
     }
   }
+
+  &.not-found-theme {
+    background-color: #d0648a;
+    .headerMenu {
+      li {
+        &:hover {
+          border: none;
+        }
+        a {
+          color: #f2b3c9;
+          &:hover {
+            color: #fff;
+          }
+        }
+        &.active {
+          a {
+            color: #fff;
+          }
+        }
+      }
+    }
+  }
 }
