--- a/pages/archive/archive.scss
+++ b/pages/archive/archive.scss
@@ -3,6 +3,7 @@ $font-color: #2d2d2d;
   padding-right: 0 !important;
   min-height: auto !important;
   min-height: initial !important;
+  padding-top: 40px !important;
 
   .container-title {
     position: relative;
