--- a/scss/icon-font.scss
+++ b/scss/icon-font.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'iconfont';  /* project id 303012 */
-  src: url('//at.alicdn.com/t/font_303012_guoc214qhy0t3xr.eot');
-  src: url('//at.alicdn.com/t/font_303012_guoc214qhy0t3xr.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_303012_guoc214qhy0t3xr.woff') format('woff'),
-  url('//at.alicdn.com/t/font_303012_guoc214qhy0t3xr.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_303012_guoc214qhy0t3xr.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_303012_2b4gyeop80lo9a4i.eot');
+  src: url('//at.alicdn.com/t/font_303012_2b4gyeop80lo9a4i.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_303012_2b4gyeop80lo9a4i.woff') format('woff'),
+  url('//at.alicdn.com/t/font_303012_2b4gyeop80lo9a4i.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_303012_2b4gyeop80lo9a4i.svg#iconfont') format('svg');
 }
 
 .iconfont {
@@ -39,6 +39,15 @@
 
 .icon-github2:before { content: "\e63f"; }
 
+.icon-qq:before { content: "\e623"; }
+
+.icon-icon-email:before { content: "\e648"; }
+
+.icon-wechat:before { content: "\e63b"; }
+
 .icon-sekuairss:before { content: "\e6b3"; }
 
+.icon-gmail:before { content: "\e676"; }
+
 .icon-zhihu1:before { content: "\e60c"; }
+
