--- a/components/SideBarRight/sidebar.scss
+++ b/components/SideBarRight/sidebar.scss
@@ -97,6 +97,10 @@
     margin-bottom: 0;
     border-bottom: 1px solid #ddd;
 
+    &.hide {
+      display: none !important;
+    }
+
     .slideTabTitle {
       position: relative;
       flex: 0 1 50%;
