--- a/pages/archive/Tags/tags.scss
+++ b/pages/archive/Tags/tags.scss
@@ -2,19 +2,46 @@ $font-color: #2d2d2d;
 
 .tagsWrap {
   width: 80%;
-  display: flex;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  justify-content: center;
+  min-height: 100px;
+
+  .tagTitle {
+    position: absolute;
+    top: 30px;
+    left: 20px;
+    font-size: 18px;
+    font-weight: bold;
+    color: $font-color;
+    margin-bottom: 20px;
+    background: #fff;
+
+    &:after {
+      content: "";
+      position: absolute;
+      bottom: -8px;
+      left: 0px;
+      height: 4px;
+      width: 40px;
+      background: #06ad9e;
+    }
+  }
+
+  .tagContent {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 140px;
+  }
 
   .tag {
     position: relative;
     flex: 0 1 auto;
     color: $font-color;
     font-size: 16px;
-    margin: 0 5px;
+    margin-right: 20px;
+    margin-bottom: 10px;
     cursor: pointer;
     text-decoration: none;
+    line-height: 1.7;
     &:link {text-decoration: none;}
     &:active {text-decoration: none;}
     &:hover {text-decoration: none;}
