--- a/scss/landing.scss
+++ b/scss/landing.scss
@@ -22,7 +22,7 @@
         position: relative;
         display: inline-block;
         margin-bottom: 20px;
-        font-size: 26px;
+        font-size: 24px;
         line-height: 1.2;
         color: rgba(0,0,0,0.6);
         transition: color 0.2s;
@@ -131,8 +131,8 @@
       }
       .article-desc {
         text-align: left;
-        margin-bottom: 10px;
-        padding-left: 140px;
+        margin-bottom: 20px;
+        padding-left: 180px;
         font-size: 14px;
 
         @media (max-width: 768px) {
@@ -146,7 +146,7 @@
         left: 200px;
         padding: 10px 20px;
         border: 1px solid #e7e7e7;
-        color: #2d2d2d;
+        color: rgba(0,0,0,0.65);
 
         @media (max-width: 768px) {
           position: static;
