--- a/wrappers/md.scss
+++ b/wrappers/md.scss
@@ -1,4 +1,6 @@
 .page-article {
+  margin-top: 20px;
+
   .article-wrapper {
     margin-top: 20px;
     margin-right: 20px;
@@ -18,6 +20,7 @@
     line-height: 1.2;
     color: rgba(0, 0, 0, 0.6);
     transition: color 0.2s;
+    border: none;
     &:hover {
       color: #616161;
     }
@@ -96,11 +99,12 @@
   }
   .article-content {
     margin-top: 10px;
-    padding-left: 150px;
+    padding-left: 160px;
     min-height: 120px;
+
     p {
       margin-bottom: 10px;
-      font-size: 14px;
+      font-size: 16px;
       line-height: 1.5;
     }
 
@@ -109,5 +113,17 @@
       max-height: 400px;
       max-width: 100%;
     }
+
+    li {
+      font-size: 16px;
+      list-style: inherit;
+    }
+    pre {
+      background: #282c34;
+    }
+    code {
+
+    }
   }
 }
+
