适配手机版样式

--- a/scss/container.scss
+++ b/scss/container.scss
@@ -1,6 +1,6 @@
 .container {
-  max-width: initial;
-  max-width: auto;
+  max-width: initial !important;
+  max-width: auto !important;
   overflow-x: hidden;
   overflow-y: auto;
   background-color: #f4f1f0;
