--- a/wrappers/md.scss
+++ b/wrappers/md.scss
@@ -22,6 +22,11 @@
     color: rgba(0, 0, 0, 0.6);
     transition: color 0.2s;
     border: none;
+
+    @media (max-width: 768px) {
+      margin-top: 0;
+      font-size: 24px;
+    }
     &:hover {
       color: #616161;
     }
@@ -40,6 +45,13 @@
     width: 160px;
     font-size: 16px;
     margin-bottom: 10px;
+
+    @media (max-width: 768px) {
+      position: relative;
+      margin: 0;
+      width: 100%;
+    }
+
     .msg-item-wrapper {}
     .msg-item-title {
       font-size: 12px;
@@ -102,6 +114,10 @@
     margin-top: 10px;
     padding-left: 160px;
     min-height: 120px;
+
+    @media (max-width: 768px) {
+      padding-left: 0;
+    }
 
     p {
       margin-bottom: 10px;
